# smurff

./: .gitignore  .gitmodules  .travis.yml  README.md  README.rst  SMURFF.code-workspace  azure-pipelines.yml  setup.py  setup_orig.py  test.py
ci/: Dockerfile  Jenkinsfile  azure-pipelines.yml  conda-steps.yml  install-miniconda.ps1
conda-recipes/: conda_build_config.yaml
conda-recipes/black_smurff-0.1/: build.sh  meta.yaml
conda-recipes/black_smurff-0.2/: meta.yaml
conda-recipes/black_smurff-0.4/: meta.yaml
conda-recipes/black_smurff-0.5/: build.sh  meta.yaml
conda-recipes/eigen3/: bld.bat  meta.yaml
conda-recipes/macau-0.5.0/: build.sh  meta.yaml
conda-recipes/macau-0.5.2/: build.sh  meta.yaml
conda-recipes/matrix_io-0.1/: meta.yaml
conda-recipes/matrix_io-0.3/: meta.yaml
conda-recipes/matrix_io-0.4/: meta.yaml
conda-recipes/matrix_io-0.5/: build.sh  meta.yaml
conda-recipes/smurff-0.10.1/: bld.bat  build.sh  meta.yaml
conda-recipes/smurff-0.10.2/: build.sh  meta.yaml
conda-recipes/smurff-0.10.3/: meta.yaml
conda-recipes/smurff-0.11.0/: meta.yaml
conda-recipes/smurff-0.11.1/: build.sh  meta.yaml
conda-recipes/smurff-0.11.2/: meta.yaml
conda-recipes/smurff-0.12.0/: build.sh  meta.yaml
conda-recipes/smurff-0.12.1/: bld.bat  meta.yaml
conda-recipes/smurff-0.12.2/: bld.bat  meta.yaml  run_test.py  run_test.sh
conda-recipes/smurff-0.12.3/: meta.yaml
conda-recipes/smurff-0.13.0/: build.sh  meta.yaml
conda-recipes/smurff-0.13.1/: build.sh  meta.yaml  run_test.bat
conda-recipes/smurff-0.14.0/: meta.yaml  run_test.bat
conda-recipes/smurff-0.14.1/: meta.yaml  run_test.py
conda-recipes/smurff-0.14.2/: meta.yaml  run_test.sh
conda-recipes/smurff-0.14.3/: meta.yaml  run_test.bat
conda-recipes/smurff-0.15.0/: meta.yaml
conda-recipes/smurff-0.5.0/: build.sh  meta.yaml
conda-recipes/smurff-0.6.0/: meta.yaml
conda-recipes/smurff-0.6.1/: meta.yaml
conda-recipes/smurff-0.6.2/: build.sh  meta.yaml
conda-recipes/smurff-0.7.0/: build.sh  meta.yaml
conda-recipes/smurff-0.8.1/: meta.yaml
conda-recipes/smurff-0.9.0/: meta.yaml
conda-recipes/smurff-0.9.1/: build.sh  meta.yaml
conda-recipes/smurff-0.9.2/: build.sh  meta.yaml
conda-recipes/smurff-centering/: build.sh  meta.yaml
conda-recipes/smurff-latest/: bld.bat  build.sh  meta.yaml
conda-recipes/smurff-pp-latest/: build.sh  meta.yaml
conda-recipes/smurff-tensor/: build.sh  meta.yaml
docker/smurff-0.10.2/: Dockerfile
docs/: .gitignore  INSTALL.md  INSTALL.rst  Makefile  conf.py  different_methods.rst  getting_started.rst  index.rst  python_api.rst  requirements.txt  saving_models.rst  what_is_smurff.rst
docs/api/: helper_classes.rst  inference.rst  input_files.rst  training.rst
docs/devel/: DEVELOPER.txt  SMURFF_class_diagram_V2  rank update.ipynb
docs/notebooks/: .gitignore  Makefile  a_first_example.ipynb  bmf with posterior propagation.ipynb  centering.ipynb  data_simulation.py  different_methods.ipynb  different_noise_models.ipynb  inference_with_smurff.ipynb  input_matrices_and_tensors.ipynb  out-of-matrix_predictions.ipynb  smurff.rst  syn_out_matrix_prediction.ipynb
docs/smurff/: README  __init__.py  center.py  datasets.py  helper.py  matrix_io.py  predict.py  prepare.py  result.py  smurff.py  wrapper.py
docs/source/: smurff.rst
lib/macau-cpp/: .clang_complete  .gitignore  Doxyfile  GFA.h  Makefile  Makefile.common  Makefile_impi  Makefile_mpi  Makefile_ompi  bpmfutils.h  cmd_mpi.cpp  cmd_nompi.cpp  cmd_session.cpp  config.h  counters.cpp  counters.h  data.cpp  data.h  gen_random.cpp  gen_random.h  gfa_dense.cpp  gfa_sparse.cpp  iface.cpp  latentprior.cpp  latentprior.h  linop.cpp  linop.h  macau.cpp  macau.h  macau_mpi.cpp  macau_mpi.h  macau_nompi.cpp  macauoneprior.cpp  macauoneprior.h  macauprior.cpp  macauprior.h  matrix_io.cpp  matrix_io.h  model.cpp  model.h  (+15 more)
lib/smurff-cpp/: .clang_complete  .gitignore  AdaptiveGaussianNoise.cpp  AdaptiveGaussianNoise.h  BaseSession.cpp  BaseSession.h  CmdSession.cpp  CmdSession.h  Config.cpp  Data.cpp  Data.h  DenseMatrixData.cpp  DenseMatrixData.h  FixedGaussianNoise.cpp  FixedGaussianNoise.h  FullMatrixData.hpp  GlobalPrior.cpp  GlobalPrior.h  ILatentPrior.cpp  ILatentPrior.h  INoiseModel.h  MPIMacauPrior.cpp  MPIMacauPrior.h  MPIMacauPrior.hpp  MacauOnePrior.cpp  MacauOnePrior.h  MacauOnePrior.hpp  MacauPrior.cpp  MacauPrior.h  MacauPrior.hpp  Makefile.common  (+94 more)
lib/smurff-cpp/BenchMvnormal/cmake/: CMakeLists.txt
lib/smurff-cpp/BenchNrandn/cmake/: CMakeLists.txt
lib/smurff-cpp/BenchWishart/cmake/: CMakeLists.txt
lib/smurff-cpp/Smurff/cmake/: CMakeLists.txt
lib/smurff-cpp/SmurffCpp/cmake/: CMakeLists.txt
lib/smurff-cpp/SmurffMPI/cmake/: CMakeLists.txt
lib/smurff-cpp/SmurffWin/cmake/: CMakeLists.txt
lib/smurff-cpp/Tests/cmake/: CMakeLists.txt
lib/smurff-cpp/cmake/: CMakeLists.txt  build_debug.sh  build_debug_verbose.sh  build_release.sh  build_release_verbose.sh  local_eigen.sh
lib/smurff-cpp/cmake/scripts/: DependenciesConfig.cmake  FindNumPy.cmake  FindPythonExtensions.cmake  ReplicatePythonSourceTree.cmake  UseCython.cmake
python/smurff/: CMakeLists.txt  Config.pxd  ISession.pxd  MacauPriorConfigItem.pxd  MatrixConfig.pxd  NoiseConfig.pxd  PVec.pxd  ResultItem.pxd  Session.pxd  SessionFactory.pxd  TensorConfig.pxd  __init__.py  cy_smurff.pyx  setup.py  setup.py.in  smurff.pxd  smurff.pyx  test.py
python/smurff/examples/: chembl-IC50-test.mm  smurff-mm.py
python/smurff/include/: Config.pxd  ISession.pxd  MacauPriorConfig.pxd  MatrixConfig.pxd  NoiseConfig.pxd  PVec.pxd  ResultItem.pxd  RootFile.pxd  SideInfoConfig.pxd  StatusItem.pxd  StepFile.pxd  TensorConfig.pxd
python/smurff/smurff/: CMakeLists.txt  __init__.py  center.py  datasets.py  helper.py  predict.py  prepare.py  result.py  smurff.py  wrapper.pyx
python/smurff/src/: CMakeLists.txt  __init__.py  cy_smurff.pyx  smurff.py
python/smurff/test/: test_bpmf.py  test_centering.py  test_gfa.py  test_macau.py  test_modelaccess.py  test_noisemodels.py  test_pp.py  test_predict.py  test_predict_sideinfo.py  test_smurff.py
(+474 files in other folders)
